--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <article>
             DE ALTA CALIDAD 
             
-        <ul class="animate__animated animate__backInLeft" >
+        <ul class="animate__animated animate__bounceInLeft" >
             <li class="mate__lista ">Planes desde: $2500</li>
             <li class="mate__lista1 ">Inscripción GRATIS</li>
             <button class="boton"><!--  <a href=""></a> --> Empieza hoy</button>
