--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -5,12 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="shortcut icon" href="../resources/logoblanco.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- CSS bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- CSS -->
+<link rel="stylesheet" href="../css/style.css">
     <title>Optimus Gym</title>
 </head>
 <body>
 <header>
-<nav class="header__nav">
+    <nav class="navbar navbar-expand-lg header__nav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="../resources/favicon.ico" alt="" >
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
+                <li class="nav-item">
+                    <a class="  nav-link active" aria-current="pages" href="../index.html">Inicio</a>
+              </li>
+              <li class="header__item nav-item">
+                <a class="  nav-link" href="planes.html">Planes</a>
+              </li>
+              <li class="header__item nav-item">
+                <a class="nav-link" href="sedes.html">Sedes</a>
+            </li>
+            <li class="header__item nav-item">
+                <a class="nav-link" href="horarios.html">Horarios</a>
+                <li class="header__item nav-item">
+                    <a class="nav-link" href="#">Contactanos</a>
+                    
+            </li>
+            </ul>
+            
+          </div>
+        </div>
+      </nav>
+<!-- <nav class="header__nav">
     <img class="header__logo" src="../resources/favicon.ico" alt="">
     <ul class="header__lista">
         <li class="header__item"> <a href="../index.html "> Inicio</a></li>
@@ -19,7 +52,7 @@
         <li class="header__item"> <a href="horarios.html">Horarios</a></li>
         <li class="header__item"> <a href="#">Contactanos</a></li>
     </ul>
-</nav>
+</nav> -->
 </header>
 <main>
 <h1 class="titulo__contactanos">Contactanos</h1>
@@ -81,6 +114,7 @@
 </div>
 <span class="footer__derechos"> Optimus Gym (c)Todos los derechos reservados desde 2022</span>
 </footer><!-- pie de pagina -->
-</body>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
