--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -11,16 +11,47 @@
     <title>Optimus Gym</title>
 </head>
 <body>
-    <header>
-        <nav class="header__nav"> <!-- navegacion -->
+    <header><!-- navegacion -->
+        <nav class="navbar navbar-expand-lg header__nav">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="../resources/favicon.ico" alt="" >
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
+                    <li class="nav-item">
+                        <a class="  nav-link active" aria-current="pages" href="../index.html">Inicio</a>
+                </li>
+                <li class=" nav-item">
+                    <a class="  nav-link" href="planes.html">Planes</a>
+                </li>
+                <li class=" nav-item">
+                    <a class="nav-link" href="sedes.html">Sedes</a>
+                </li>
+                <li class=" nav-item">
+                    <a class="nav-link" href="#">Horarios</a>
+                    <li class=" nav-item">
+                        <a class="nav-link" href="contactanos.html">Contactanos</a>
+                        
+                </li>
+                </ul>
+                
+            </div>
+            </div>
+        </nav>
+        <!-- <nav class="header__nav"> 
             <img class="header__logo" src="../resources/favicon.ico" alt="">
-            <ul class="header__lista"> <!-- lista desordenadas -->
+            <ul class="header__lista"> 
                 <li class="header__item"> <a href="../index.html"> Inicio</a></li>
                 <li class="header__item"><a href="planes.html"> Planes</a> </li>
                 <li class="header__item"><a href="sedes.html">Sedes</a> </li>
                 <li class="header__item"><a href="#"> Horarios</a> </li>
                 <li class="header__item"><a href="contactanos.html">Contactanos</a> </li>
             </ul>
+        </nav> -->
 </header>
 <main>
 <section>
