--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -15,34 +15,34 @@
 <header>
     <nav class="navbar navbar-expand-lg header__nav">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#">
             <img src="../resources/favicon.ico" alt="" >
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
                 <li class="nav-item">
                     <a class="  nav-link active" aria-current="pages" href="../index.html">Inicio</a>
-              </li>
-              <li class="header__item nav-item">
+            </li>
+            <li class=" nav-item">
                 <a class="  nav-link" href="planes.html">Planes</a>
-              </li>
-              <li class="header__item nav-item">
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="sedes.html">Sedes</a>
             </li>
-            <li class="header__item nav-item">
+            <li class=" nav-item">
                 <a class="nav-link" href="horarios.html">Horarios</a>
-                <li class="header__item nav-item">
+                <li class=" nav-item">
                     <a class="nav-link" href="#">Contactanos</a>
                     
             </li>
             </ul>
             
-          </div>
         </div>
-      </nav>
+        </div>
+    </nav>
 <!-- <nav class="header__nav">
     <img class="header__logo" src="../resources/favicon.ico" alt="">
     <ul class="header__lista">
