agrego nav a paginas

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
                 <li class="nav-item">
-                    <a class="  nav-link active" aria-current="pages" href="../index.html">Inicio</a>
+                    <a class="  nav-link " aria-current="pages" href="../index.html">Inicio</a>
             </li>
             <li class=" nav-item">
                 <a class="  nav-link" href="planes.html">Planes</a>
@@ -35,7 +35,7 @@
             <li class=" nav-item">
                 <a class="nav-link" href="horarios.html">Horarios</a>
                 <li class=" nav-item">
-                    <a class="nav-link" href="#">Contactanos</a>
+                    <a class="nav-link active" href="#">Contactanos</a>
                     
             </li>
             </ul>
