--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
                     <li class="nav-item">
-                        <a class="  nav-link active" aria-current="pages" href="../index.html">Inicio</a>
+                        <a class="  nav-link " aria-current="pages" href="../index.html">Inicio</a>
                 </li>
                 <li class=" nav-item">
                     <a class="  nav-link" href="planes.html">Planes</a>
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="sedes.html">Sedes</a>
                 </li>
                 <li class=" nav-item">
-                    <a class="nav-link" href="#">Horarios</a>
+                    <a class="nav-link active" href="#">Horarios</a>
                     <li class=" nav-item">
                         <a class="nav-link" href="contactanos.html">Contactanos</a>
                         
