--- a/pages/planes.html
+++ b/pages/planes.html
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
                     <li class="nav-item">
-                        <a class="  nav-link active" aria-current="pages" href="../index.html">Inicio</a>
+                        <a class="  nav-link " aria-current="pages" href="../index.html">Inicio</a>
                 </li>
                 <li class=" nav-item">
-                    <a class="  nav-link" href="#">Planes</a>
+                    <a class="  nav-link active" href="#">Planes</a>
                 </li>
                 <li class=" nav-item">
                     <a class="nav-link" href="sedes.html">Sedes</a>
