--- a/index.html
+++ b/index.html
@@ -49,17 +49,6 @@
             </div>
             </div>
         </nav>
-<!-- <!-- <!--  <nav class="header__nav"> <!-- navegacion -->
-            <!-- <img class="header__logo" src="resources/favicon.ico" alt="">
-            <ul class="header__lista"> <!-- lista desordenadas -->
-                <!-- <li class="header__item"> <a href="#"> Inicio</a></li>
-                <li class="header__item"><a href="pages/planes.html"> Planes</a> </li>
-                <li class="header__item"><a href="pages/sedes.html">Sedes</a> </li>
-                <li class="header__item"><a href="pages/horarios.html"> Horarios</a> </li>
-                <li class="header__item"><a href="pages/contactanos.html">Contactanos</a> </li>
-            </ul>
-            </nav>  -->
-
 
     </header>
     <main><div>
@@ -72,7 +61,8 @@
         <ul class="animate__animated animate__bounceInLeft" >
             <li class="mate__lista ">Planes desde: $2500</li>
             <li class="mate__lista1 ">Inscripción GRATIS</li>
-            <button class="boton"><!--  <a href=""></a> --> Empieza hoy</button>
+            <form >
+                <button class="boton" type="button">EMPIEZA HOY</button></form>
         </ul></div>
         </h1>
         
