--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -42,16 +42,7 @@
             </div>
             </div>
         </nav>
-        <!-- <nav class="header__nav"> 
-            <img class="header__logo" src="../resources/favicon.ico" alt="">
-            <ul class="header__lista"> 
-                <li class="header__item"> <a href="../index.html"> Inicio</a></li>
-                <li class="header__item"><a href="planes.html"> Planes</a> </li>
-                <li class="header__item"><a href="sedes.html">Sedes</a> </li>
-                <li class="header__item"><a href="#"> Horarios</a> </li>
-                <li class="header__item"><a href="contactanos.html">Contactanos</a> </li>
-            </ul>
-        </nav> -->
+        
 </header>
 <main>
 <section>
@@ -79,7 +70,7 @@
     <div class="footer__logo">
     <img class="logo__fotter" src="../resources/logo_footer.png" alt="">
 </div>
-<div class="redes__footer">
+<div  class="redes__footer">
     <!-- <h5 class="seguinos__footer">Seguinos</h5> -->
     <img class="logo__ig" src="../resources/ig2.jpg" alt="">
     <img class="logo__wpp" src="../resources/wpp.jpg" alt="">
@@ -104,7 +95,7 @@
     
 </div>
 <span class="footer__derechos"> Optimus Gym (c)Todos los derechos reservados desde 2022</span>
-</footer><<!--  pie de pagina  -->
+</footer><!--  pie de pagina  -->
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
