--- a/pages/planes.html
+++ b/pages/planes.html
@@ -42,17 +42,7 @@
             </div>
             </div>
         </nav>
-        <!-- <nav class="header__nav">
-        <img class="header__logo" src="../resources/favicon.ico" alt="">
-        <ul class="header__lista">
-            <li class="header__item"> <a href="../index.html "> Inicio</a></li>
-            <li class="header__item"> <a href="#">Planes</a></li>
-            <li class="header__item"> <a href="sedes.html">Sedes</a></li>
-            <li class="header__item"> <a href="horarios.html">Horarios</a></li>
-            <li class="header__item"> <a href="contactanos.html">Contactanos</a></li>
-        </ul>
-    
-</nav> -->
+        
 </header>
 <main class="fondo__planes">
     <section>
@@ -61,7 +51,7 @@
 <h2 > Elegí tu plan y entrena con nosotros </h2>
 <h2 > unite al cambio</h2></article>
 </section>
-<section>
+<section class="flex__planes">
 <img class="plan__1" src="../resources/planestandar1.jpg" alt="">
 <img class="plan__2" src="../resources/planpremiun2.jpg" alt="">
 <img class="plan__3" src="../resources/full2x13.jpg" alt="">
