--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -72,7 +72,7 @@
 <h3>subtitulo</h3>
 </section>
 <section>
-    <iframe class="mapa__sede" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.9285446875388!2d-58.40404138518963!3d-34.75739277315149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd291613b5f75%3A0x6306ea8f84b7f421!2sAv.%20Hip%C3%B3lito%20Yrigoyen%2C%20B1832BRE%20Lomas%20de%20Zamora%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1657937646748!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="mapa__sede" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.9285446875388!2d-58.40404138518963!3d-34.75739277315149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd291613b5f75%3A0x6306ea8f84b7f421!2sAv.%20Hip%C3%B3lito%20Yrigoyen%2C%20B1832BRE%20Lomas%20de%20Zamora%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1657937646748!5m2!1ses!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
 
 <!-- <img src="../resources/gym4.jpg" alt="estos son discos de gym"> -->
