aplicando nesting y variables

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </nav>
 
     </header>
-    <main><div>
-        <section class="mate ">
+    <main class="main__index"><div>
+        <section class="mate">
         
             <h1 class="mate__titulo ">ENTRENAMIENTO 
             <article>
             DE ALTA CALIDAD 
-            
+            </article>
         <ul class="animate__animated animate__bounceInLeft" >
             <li class="mate__lista ">Planes desde: $2500</li>
             <li class="mate__lista1 ">Inscripción GRATIS</li>
@@ -118,8 +118,6 @@
             <img class="logo__fb" src="resources/fb.png" alt="">
         </div>
         <div class="nuestrassedes">
-            <!-- <h2 class="nuestras__sedes">Nuestras Sedes</h2></div> -->
-            <!-- <div class="footer__img" > -->
             <ul class="ul__footer" >
                 <li class="lista__footer"><h2 class="nuestras__sedes">Nuestras Sedes</h2></li>
                 <li class="lista__footer">Lomas de Zamora</li>
