aplicando operadores SASS

--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -46,11 +46,10 @@
 </header>
 <main>
 <h1 class="titulo__sedes">Sedes</h1>
-<section >
-    ><img class="foto__sedeprincipal" src="../resources/sede1.jpg" alt="">
-        
-    <img class="foto__sedebanfield" src="../resources/sede2.jpg" alt="">
-    <img class="foto__sede" src="../resources/sede3.jpg" alt="">
+<section ><article>
+    <img class="foto__sedeprincipal" src="../resources/sede1.jpg" >
+    <img class="foto__sedebanfield" src="../resources/sede2.jpg" >
+    <img class="foto__sede" src="../resources/sede3.jpg" ></article>
 
 </section>
 <section>
