--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="GYM, GIMNASIO,NATACION,MUSCULACION,PERSONAL TRAINNER,SPINNING,BOXEO,YOGA,CROSSFIT">
+    <meta name="description" content="El gimnasio más completo en la zona, con actividades variadas e integradas">
+
     <link rel="shortcut icon" href="resources/logoblanco.png" type="image/x-icon">
     <!-- ANIMACIONES -->
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -15,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Optimus Gym</title>
+    <title>Optimus Gym-Inicio</title>
 </head>
 <body>
     <header>
@@ -115,7 +118,7 @@
             <!-- <h5 class="seguinos__footer">Seguinos</h5> -->
             <img class="logo__ig" src="resources/ig2.jpg" alt="">
             <img class="logo__wpp" src="resources/wpp.jpg" alt="">
-            <img class="logo__fb" src="resources/fb.png" alt="">
+            <img class="logo__fb" src="resources/1200px-Facebook_icon_(black).svg.png" alt="">
         </div>
         <div class="nuestrassedes">
             <ul class="ul__footer" >
