--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="keywords" content="GYM, GIMNASIO,SALUD,FITNESS,VIDA SALUDABLE,DEPORTES,ACTIVIDAD FISICA,NATACION,MUSCULACION,PERSONAL TRAINER,SPINNING,BOXEO,YOGA,CROSSFIT">
+    <meta name="description" content="Para cualquier consulta estamos a tu disposición">
     <link rel="shortcut icon" href="../resources/logoblanco.png" type="image/x-icon">
     <!-- CSS bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- CSS -->
 <link rel="stylesheet" href="../css/style.css">
-    <title>Optimus Gym</title>
+    <title>Optimus Gym-Contactanos</title>
 </head>
 <body>
 <header>
@@ -82,7 +84,7 @@
 <div class="redes__footer">
     <img class="logo__ig" src="../resources/ig2.jpg" alt="">
     <img class="logo__wpp" src="../resources/wpp.jpg" alt="">
-    <img class="logo__fb" src="../resources/fb.png" alt="">
+    <img class="logo__fb" src="../resources/1200px-Facebook_icon_(black).svg.png" alt="">
 </div>
 <div class="nuestrassedes">
     
