--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="GYM, GIMNASIO,MEDITACION,DEPORTES,ACTIVIDAD FISICA,ZUMBA,NATACION,MUSCULACION,PERSONAL TRAINNER,SPINNING,BOXEO,YOGA,CROSSFIT">
+    <meta name="description" content="Nos encontramos desde las 8hs hasta las 21hs de lunes a viernes">
     <link rel="shortcut icon" href="../resources/logoblanco.png" type="image/x-icon">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Optimus Gym</title>
+    <title>Optimus Gym-Horarios</title>
 </head>
 <body>
     <header><!-- navegacion -->
@@ -74,7 +76,7 @@
     <!-- <h5 class="seguinos__footer">Seguinos</h5> -->
     <img class="logo__ig" src="../resources/ig2.jpg" alt="">
     <img class="logo__wpp" src="../resources/wpp.jpg" alt="">
-    <img class="logo__fb" src="../resources/fb.png" alt="">
+    <img class="logo__fb" src="../resources/1200px-Facebook_icon_(black).svg.png" alt="">
 </div>
 <div class="nuestrassedes">
     <!-- <h2 class="nuestras__sedes">Nuestras Sedes</h2></div> -->
