Subido al servidor

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -50,8 +50,8 @@
     <section>
 <h1 class="titulo__planes">Planes </h1>
 <article>
-<h2 > Elegí tu plan y entrena con nosotros </h2>
-<h2 > unite al cambio</h2></article>
+<h2 > Elegí tu plan y entrená con nosotros </h2>
+</article>
 </section>
 <section class="flex__planes">
 <img class="plan__1" src="../resources/planestandar1.jpg" alt="">
