--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -62,7 +62,7 @@
     </div>
     <div class="form-floating">
         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password</label>
+        <label for="floatingPassword">Contraseña</label>
     </div>
     <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Deja Tus comentarios</label>
