--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="resources/app.png" class=" galeria__img--destacada d-block w-100" alt="...">
+                    <img src="resources/portada4.png" class=" galeria__img--destacada d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
+                <!-- <div class="carousel-item">
                     <img src="resources/carousel.png" class="galeria__img--destacada d-block w-100" alt="...">
-                </div>
+                </div> -->
                 <div class="carousel-item">
-                    <img src="resources/carousel_dos.jpg" class="galeria__img--destacada d-block w-100" alt="...">
+                    <img src="resources/portada3.png" class="galeria__img--destacada d-block w-100" alt="...">
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
